Project

General

Profile

Actions

Bug #11463

closed

Process.spawn raises TypeError when passing hash with keys/vals other than strings

Bug #11463: Process.spawn raises TypeError when passing hash with keys/vals other than strings

Added by bubo47 (Jakub Jursa) about 11 years ago. Updated about 11 years ago.

Status:
Closed
Assignee:
-
Target version:
-
ruby -v:
ruby 2.3.0dev (2015-08-18 trunk 51624) [x86_64-linux]
[ruby-core:<unknown>]

Description

expected:

head :001 > Process.spawn({"FOO" => 10}, "bash")
 => 13479 

got in reality:

head :001 > Process.spawn({"FOO" => 10}, "bash")
TypeError: no implicit conversion of Fixnum into String

This issue is similar to https://bugs.ruby-lang.org/issues/10859. Both issues aren't mentioned in docs ( http://ruby-doc.org/core-2.2.2/Process.html#method-c-spawn ) - who/how should I urge to fix it also there?
...

Actions

Also available in: PDF Atom