process.c: [DOC] env values in spawn [ci skip]

* process.c (rb_f_spawn): [DOC] elaborate environment variable
  values.  [ruby-core:70456] [Bug #11463]

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@51641 b2dd03c8-39d4-4d8f-98ff-823fe69b080e